--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>portolio</title>
+    <title>Dario Foti Portolio</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
@@ -19,16 +19,58 @@
         </ul>
       </div>
     </nav>
-    <nav id="hamburger.nav">
+    <nav id="hamburger-nav">
       <div class="logo">Dario Foti</div>
-      <div class="hamburgefr-menu">
-        <div class="hamburger-icon" onclick="toogleMenu()">
+      <div class="hamburger-menu">
+        <div class="hamburger-icon" onclick="toggleMenu()">
           <span></span>
           <span></span>
           <span></span>
         </div>
+        <div class="menu-links">
+          <li><a href="#about" onclick="toggleMenu()">About</a></li>
+          <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
+          <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
+          <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
+        </div>
       </div>
     </nav>
+    <section id="profile">
+      <div class="section_picture-container">
+        <img src="./assets/profile-pic_gradient.png" alt="" />
+      </div>
+      <div class="section__text">
+        <p class="section__text__p1">Hello, I’m</p>
+        <h1 class="titel">Dario Foti</h1>
+        <p class="section__text__p2">User Experience Designer</p>
+        <div class="btn-container">
+          <button
+            class="btn btn-color-2"
+            onclick="window.open('./assets/CV_Dario_Foti.pdf')"
+          >
+            Download CV
+          </button>
+          <button class="btn btn-color-1" onclick="location.href='./#contact'">
+            Contact
+          </button>
+        </div>
+        <div id="socials-container">
+          <img
+            src="./assets/LinkedIN_sw.png"
+            alt="My LinkedIn profile"
+            class="icon"
+            onclick="location.href='https://www.linkedin.com/in/dario-foti-b858822b4/'"
+          />
+          <img
+            src="./assets/Behance_sw.png"
+            alt="My Behance profile"
+            class="icon"
+            onclick="location.href='https://www.behance.net/dariofoti2'"
+          />
+        </div>
+      </div>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
+x
