--- a/index.html
+++ b/index.html
@@ -70,6 +70,35 @@
         </div>
       </div>
     </section>
+    <section id="about">
+      <p class="section__text__p1">Get to Know more</p>
+      <h1 class="titel__h2">About Me</h1>
+      <div class="section-container">
+        <div class="section_picture-container_about">
+          <img
+            src="./assets/about-dario.jpg"
+            alt="profile picture"
+            class="about-picture"
+          />
+        </div>
+        <div class="about-details-container">
+          <div class="about-containers">
+            <div class="details-container">
+              <img
+                src="./assets/experience.png"
+                alt="experience icon"
+                class="icon"
+              />
+              <h3>Experience</h3>
+              <p>
+                8+ years <br />
+                Graphic Design
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
