--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </div>
     </section>
     <section id="about">
-      <p class="section__text__p1">Get to Know more</p>
+      <p class="section__text__p1">Get to know more</p>
       <h1 class="titel__h2">About Me</h1>
       <div class="section-container">
         <div class="section_picture-container_about">
