--- a/index.html
+++ b/index.html
@@ -90,16 +90,34 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>
-                8+ years <br />
-                Graphic Design
-              </p>
+              <p>8+ years <br />Graphic Design</p>
             </div>
+            <div class="details-container">
+              <img
+                src="./assets/education.png"
+                alt="Education icon"
+                class="icon"
+              />
+              <h3>Education</h3>
+              <p>Bachelor in Digital Ideation<br />Focus UX-Design</p>
+            </div>
+          </div>
+          <div class="text-container">
+            <p>
+              I am a passionate UX designer from Lucerne with a strong
+              background in Graphic design. I pursued a degree in Digital
+              Ideation at the Lucerne University of Applied Sciences and Arts.
+            </p>
           </div>
         </div>
       </div>
+      <img
+        src="./assets/arrow.png"
+        alt="Arrow icon"
+        class="icon arrow"
+        onclick="location.href='./#experience'"
+      />
     </section>
     <script src="script.js"></script>
   </body>
 </html>
-x
