--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div class="section-container">
         <div class="section_picture-container_about">
           <img
-            src="./assets/about-dario.jpg"
+            src="./assets/about-dario.png"
             alt="profile picture"
             class="about-picture"
           />
