--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@
         onclick="location.href='./#experience'"
       />
     </section>
+    <section id="experience">
+      <p class="section__text__p1">Explore My</p>
+      <h1>Experience</h1>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
