--- a/index.html
+++ b/index.html
@@ -333,6 +333,7 @@
               </button>
             </div>
           </div>
+          
       </div>
       <img
         src="./assets/arrow.png"
@@ -340,7 +341,41 @@
         class="icon arrow"
         onclick="location.href='./#contact'"
       />
+    <section id="contact">
+       <p class="titel__h2">Get in Touch</p>
+      <h1 class="titel__h2">Contact Me</h1>
+      <div class="contact-info-upper-container">
+        <div class="contact-info-container">
+          <img
+            src="./assets/email.png"
+            alt="Email icon"
+            class="icon contact-icon email-icon"
+          />
+          <p><a href="mailto:dario.foti.contact@gmail.com">Email</a></p>
+        </div>
+        <div class="contact-info-container">
+          <img
+            src="./assets/linkedin.png"
+            alt="LinkedIn icon"
+            class="icon contact-icon"
+          />
+          <p><a href="https:////www.linkedin.com/in/dario-foti-b858822b4/'">LinkedIn</a></p>
+        </div>
+      </div>
     </section>
+        <footer>
+      <nav>
+        <div class="nav-links-container">
+          <ul class="nav-links">
+            <li><a href="#about">About</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
+      <p>Copyright &#169; 2025 Dario Foti</p>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
