--- a/index.html
+++ b/index.html
@@ -104,9 +104,7 @@
           </div>
           <div class="text-container">
             <p>
-              I am a passionate UX designer from Lucerne with a strong
-              background in Graphic design. I pursued a degree in Digital
-              Ideation at the Lucerne University of Applied Sciences and Arts.
+              I am a passionate UX designer from Lucerne with a strong background in Graphic design. I pursued a degree in Digital Ideation at the Lucerne University of Applied Sciences and Arts, specializing in User Experience Design.
             </p>
           </div>
         </div>
@@ -126,7 +124,7 @@
           <div class="details-container">
             <h2 class="experience-sub-title">Software</h2>
             <div class="article-container">
-              <article>
+                          <article>
                 <img
                   src="./assets/checkmark.png"
                   alt="Experience icon"
@@ -144,7 +142,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Adobe Suite</h3>
+                  <h3>Adobe CS</h3>
                   <p>Proficient</p>
                 </div>
               </article>
@@ -159,7 +157,7 @@
                   <p>Intermediate</p>
                 </div>
               </article>
-              <article>
+             <article>
                 <img
                   src="./assets/checkmark.png"
                   alt="Experience icon"
@@ -167,17 +165,6 @@
                 />
                 <div>
                   <h3>Spline</h3>
-                  <p>Proficient</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Cinema 4D</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -188,7 +175,18 @@
                   class="icon"
                 />
                 <div>
-                  <h3>HTML & CSS</h3>
+                  <h3>Blender</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>HTML/CSS</h3>
                   <p>Basics</p>
                 </div>
               </article>
@@ -342,7 +340,7 @@
         onclick="location.href='./#contact'"
       />
     <section id="contact">
-       <p class="titel__h2">Get in Touch</p>
+       <p class="section__text__p1">Get in Touch</p>
       <h1 class="titel__h2">Contact Me</h1>
       <div class="contact-info-upper-container">
         <div class="contact-info-container">
