--- a/index.html
+++ b/index.html
@@ -298,16 +298,16 @@
                    <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/Data-Viz.jpg"
+                src="./assets/Web-Redesign.jpg"
                 alt="Data Visualization"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Projekt 2</h2>
+            <h2 class="experience-sub-title project-title">Website Redesign</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://www.behance.net/gallery/209169163/Disabled-and-Unemployed-in-Europe-%28data-visualization%29'"
+                onclick="location.href='https://www.behance.net/gallery/199108393/Nine-Day-Sprint-for-HSCL-Website-Redesign'"
               >
                 Behance
               </button>
@@ -316,12 +316,12 @@
                              <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/Data-Viz.jpg"
-                alt="Data Visualization"
+                src="./assets/Concept and Design.jpg"
+                alt="Concept and Design"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Projekt 3</h2>
+            <h2 class="experience-sub-title project-title">Concept Product</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -331,7 +331,25 @@
               </button>
             </div>
           </div>
-          
+           <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/E_Pub.jpg"
+                alt="Data Visualization"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Digital Publication</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://www.behance.net/gallery/209164863/Living-in-Digits-%28e-Pub%29'"
+              >
+                Behance
+              </button>
+            </div>
+          </div>
+          </div>
       </div>
       <img
         src="./assets/arrow.png"
@@ -357,7 +375,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https:////www.linkedin.com/in/dario-foti-b858822b4/'">LinkedIn</a></p>
+          <p><a href="linkedin.com/in/dario-foti-b858822b4">LinkedIn</a></p>
         </div>
       </div>
     </section>
