--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://www.behance.net/gallery/209169163/Disabled-and-Unemployed-in-Europe-%28data-visualization%29'"
+                onclick="location.href='https://www.behance.net/gallery/209363637/Bindella-Wine-Subscription-%28Concept-and-Design%29'"
               >
                 Behance
               </button>
