Link correction LinkedIn

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="linkedin.com/in/dario-foti-b858822b4">LinkedIn</a></p>
+          <p><a href='https://www.linkedin.com/in/dario-foti-b858822b4'>LinkedIn</a></p>
         </div>
       </div>
     </section>
