--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
         </div>
         <div class="contact-info-container">
           <img
-            src="./assets/linkedin_small.png"
+            src="./assets/LinkedIn_s.png"
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
